Add links and functionality for Songs and Genres.

--- a/playlister-erb/views/index.erb
+++ b/playlister-erb/views/index.erb
@@ -1,3 +1,7 @@
+<h1>This is an HTML version of MyJukebox with ERB</h1>
+
 <ul>
   <li><a href="/artists">Artists</a></li>
+  <li><a href="/songs">Songs</a></li>
+  <li><a href="/genres">Genres</a></li>
 </ul>
