--- a/playlister-erb/views/artists.erb
+++ b/playlister-erb/views/artists.erb
@@ -1,4 +1,4 @@
-<h1>My Library</h1>
+<h1>List of Artists</h1>
 <ul>
 <% artists.each do |artist| %>
   <li><a href="<%= artist.url %>"><%= artist.name %></a></li>
