--- a/flatironschool/student_site_rails/app/views/students/index.html.erb
+++ b/flatironschool/student_site_rails/app/views/students/index.html.erb
@@ -5,7 +5,7 @@
   </div>
 
   <div class="blog-title">
-    <div class="big-comment"><h3><a href="students/<%= student.name %>.php"><%= student.name %></a></h3></div>
+    <div class="big-comment"><h3><a href="students/<%= student.id %>"><%= student.name %></a></h3></div>
     <p class="home-blog-post-meta">Hysterical Tag Line</p>
   </div>
   <div class="clear"></div>
@@ -19,7 +19,7 @@
 
 <h1>Listing students</h1>
 
-<table>
+<!-- <table>
   <tr>
     <th>Name</th>
     <th>Tagline</th>
@@ -49,8 +49,8 @@
     <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
-</table>
+</table> -->
 
-<br />
+<br>
 
 <%= link_to 'New Student', new_student_path %>
