--- a/flatironschool/student_site_rails/app/views/layouts/application.html.erb
+++ b/flatironschool/student_site_rails/app/views/layouts/application.html.erb
@@ -7,9 +7,17 @@
 
   <title>The Flatiron School</title>
 
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag "style" %>
+  <%= stylesheet_link_tag "media-queries" %>
+  <%= stylesheet_link_tag "flexslider" %>
+  <%= stylesheet_link_tag "font-awesome" %>
+
+  <%= javascript_include_tag "comment-reply.min" %>
+  <%= javascript_include_tag "jquery" %>
+  <%= javascript_include_tag "chirp.min" %>
+
   <%= csrf_meta_tags %>
+  
 </head>
 
 <body class="home page students">
