--- a/flatironschool/student_site_rails/app/views/students/index.html.erb
+++ b/flatironschool/student_site_rails/app/views/students/index.html.erb
@@ -1,3 +1,15 @@
+<!-- Begin Content -->
+<div class="container">
+
+  <!-- Begin Title Content -->
+  <div class="page-title">
+    <h2>Every Story Has Heroes</h2>
+    <h3>We're <%= @students.count %> people on a journey to learn to love code.</h3>
+  </div>
+  <!-- End Title Content -->
+
+</div>
+
 <div id="random-full-width-content" class="this-div-is-just-a-helpful-container">
   <div class="section section-services student-index">
     <div class="section-title">
