--- a/flatironschool/student_site_rails/app/views/students/show.html.erb
+++ b/flatironschool/student_site_rails/app/views/students/show.html.erb
@@ -42,4 +42,5 @@
 
 
 <%= link_to 'Edit', edit_student_path(@student) %> |
-<%= link_to 'Back', students_path %>
+<%= link_to 'Back', students_path %> |
+<%= link_to "Remove", @student, method: :delete, data: { confirm: "Are you sure?" } %>
