Fix javascript issues and consolidate in application.js file.

--- a/flatironschool/student_site_rails/app/views/layouts/application.html.erb
+++ b/flatironschool/student_site_rails/app/views/layouts/application.html.erb
@@ -12,9 +12,7 @@
   <%= stylesheet_link_tag "flexslider" %>
   <%= stylesheet_link_tag "font-awesome" %>
 
-  <%= javascript_include_tag "comment-reply.min" %>
-  <%= javascript_include_tag "jquery" %>
-  <%= javascript_include_tag "chirp.min" %>
+  <%= javascript_include_tag "application" %>
 
   <%= csrf_meta_tags %>
 
@@ -93,11 +91,6 @@
     </div>
   </div>
   <!-- End Footer -->
-
-  <%= javascript_include_tag "jquery.flexslider" %>
-  <%= javascript_include_tag "jquery.tabs.min" %>
-  <%= javascript_include_tag "jquery.fitvids" %>
-  <%= javascript_include_tag "jquery.mobilemenu" %>
 
   <script type="text/javascript">
 
