--- a/flatironschool/student_site_rails/app/views/layouts/application.html.erb
+++ b/flatironschool/student_site_rails/app/views/layouts/application.html.erb
@@ -87,7 +87,7 @@
         <div class="menu">
           <ul>
             <li>
-              <a href="index.html">
+              <a href="/">
                 <i class="icon-home icon-2x"></i>
               </a>
             </li>
