Update view with new education and work information.

--- a/flatironschool/student_site_rails/app/views/students/show.html.erb
+++ b/flatironschool/student_site_rails/app/views/students/show.html.erb
@@ -67,7 +67,7 @@
             <div class="services-title"><h3>Biography</h3></div>
             <div class="clear"></div>
             <p>
-             <%= @student.bio %>
+              <%= @student.bio %>
             </p>
           </div>
         </div>
@@ -76,7 +76,9 @@
           <div class="services">
             <div class="services-title"><h3>Education</h3></div>
             <div class="clear"></div>
-            <p>@student.education goes here!
+            <p>
+              <%= @student.education %>
+            </p>
           </div>
         </div>
 
@@ -85,7 +87,7 @@
             <div class="services-title"><h3>Work</h3></div>
             <div class="clear"></div>
             <p>
-              @student.experience goes here!
+              <%= @student.work %>
             </p>
           </div>
         </div>
