--- a/flatironschool/recipes-on-rails_uniqueness/app/views/layouts/application.html.erb
+++ b/flatironschool/recipes-on-rails_uniqueness/app/views/layouts/application.html.erb
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-  <title>RecipesLab</title>
+
+  <title>My Drunk Kitchen</title>
+  
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
 </head>
 <body>
 
